--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,45 @@
-version: "3.9"
+# The 'version' attribute is obsolete and can be removed.
 services:
   db:
-    image: postgres:16
+    image: postgres:16 # <-- Best practice: Pin to a specific major version
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    ports:
-      - "5432:5432"
+      - POSTGRES_DB=your_db_name
+      - POSTGRES_USER=your_db_user
+      - POSTGRES_PASSWORD=your_db_password
     volumes:
-      - pg_data:/var/lib/postgresql/data
+      - pg_data_custom:/var/lib/postgresql # <-- THE FIX: Changed the mount path
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U your_db_user -d your_db_name"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  pgadmin:
-    image: dpage/pgadmin4:latest
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@example.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-    ports:
-      - "${PGADMIN_PORT}:80"
-    depends_on:
-      - db
-
   web:
     build: .
-    command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
-      - "${WEB_PORT}:8000"
-    env_file:
-      - .env
+      - "8000:8000"
+    environment:
+      - DB_NAME=your_db_name
+      - DB_USER=your_db_user
+      - DB_PASSWORD=your_db_password
+      - DB_HOST=db
+      - DB_PORT=5432
     depends_on:
       db:
         condition: service_healthy
 
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@example.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
+
 volumes:
-  pg_data:
+  pg_data_custom:
